# common_captcha

./: .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
common_captcha/: __init__.py  config.py
common_captcha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common_captcha/resource/: __init__.py
common_captcha/strategy/: block_puzzle_captcha.py  click_word_captcha.py  simple_captcha.py
common_captcha/utils/: image_util.py  ramdom_util.py  redis_util.py
