[metadata]
name = common_captcha
version = 1.0.3
url = https://github.com/Asamusummer/common_captcha
author = lei.wang
author_email = yqslwl@163.com
description = common captcha for web server
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
include_package_data = True
zip_sage=False
python_requires = >=3.6
packages = find:
install_requires =
    redis>=4.0.2

[options.package_data]
* = *.jpg, *.png

[gh-actions]
python =
    3.8: py38, black, ruff, mypy
    3.9: py39
    3.10: py310
    3.11: py311
